registration is completed

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,8 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+	h1 amistad messenger
+	p click here to 
+	a(href = '/login') login
+	|&nbsp;or&nbsp;
+	a(href = '/registration') registration
