new file added message.jade. All The messeging functionality has been done. message/id() method has been modified. By that method now we user can get messages sent from them to their perticular friend.

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -6,3 +6,9 @@ block content
 
 	h5
 		a(href = '/logout') logout
+
+	h2 USER LIST
+		each user in list
+			if user.email != email
+				p
+					a(href = '/message/#{user.u_id}') #{user.email}
