--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,10 @@ body {
 a {
   color: #00B7FF;
 }
+
+.messageBody {
+	height: 600px;
+	width: 600px;
+	overflow-y: scroll;
+	border: 1px black solid;
+}
